# CMake-Ep018

./: CMakeLists.txt
main/src/: information.cpp  main.cpp
math/: CMakeLists.txt
math/include/: supermath.hpp
math/src/: supermath.cpp
stats/: CMakeLists.txt
stats/include/: stats.hpp
stats/src/: stats.cpp
